[gd_scene load_steps=3 format=3 uid="uid://cn5ojgpujh72x"]

[ext_resource type="Script" path="res://S/s_main.gd" id="1_fsqsm"]
[ext_resource type="FontFile" uid="uid://b2mlmy5afafts" path="res://素材/字体/SmileySans-Oblique.ttf" id="1_mjci8"]

[node name="S_main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsqsm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -130.0
offset_right = 157.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 100
text = "Settings"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -221.0
offset_right = 270.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.991831, 1)
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 60
text = "button1:"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 60
text = "button2:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="ButtonA" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 60
text = "A"

[node name="ButtonD" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 60
text = "D"

[node name="return" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 70
text = "Return"

[node name="Label" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -23.0
offset_right = 412.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.721569, 0.780392, 0.27451, 1)
theme_override_fonts/font = ExtResource("1_mjci8")
theme_override_font_sizes/font_size = 100
text = "Please enter a custom key"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer2/ButtonA" to="." method="_on_button_a_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer2/ButtonD" to="." method="_on_button_d_button_down"]
[connection signal="button_down" from="Panel/return" to="." method="_on_return_button_down"]
